--- a/site/public/index.css
+++ b/site/public/index.css
@@ -439,7 +439,9 @@ strong {
 }
 
 .prize p {
-    font-size: 1.1rem;
+    margin-top: 0.5rem;
+    font-size: 1.2rem;
+    text-shadow: 2px 2px var(--shadow-color);
 }
 
 .prize .prize-title {
