Add 2024 rating backend (testing mode)

--- a/site/public/global.css
+++ b/site/public/global.css
@@ -13,6 +13,7 @@
     --color-link-hover: rgb(255, 204, 192);
 
     --color-main: var(--color-8);
+    --color-secondary: rgb(94, 158, 137);
 
     --sections: 6;
     --shadow-color: #00000088;
