--- a/site/public/index.css
+++ b/site/public/index.css
@@ -1,3 +1,7 @@
+:root {
+    --sections: 6;
+}
+
 #about {
     box-shadow: var(--section-shadow);
     font-weight: bold;
@@ -158,35 +162,35 @@ strong {
 }
 
 #main > *:nth-child(1)::before {
-    background-color: var(--color-1);
-}
-
-#main > *:nth-child(2)::before {
     background-color: var(--color-2);
 }
 
-#main > *:nth-child(3)::before {
+#main > *:nth-child(2)::before {
     background-color: var(--color-3);
 }
 
-#main > *:nth-child(4)::before {
+#main > *:nth-child(3)::before {
     background-color: var(--color-4);
 }
 
-#main > *:nth-child(5)::before {
+#main > *:nth-child(4)::before {
     background-color: var(--color-5);
 }
 
-#main > *:nth-child(6)::before {
+#main > *:nth-child(5)::before {
     background-color: var(--color-6);
 }
 
-#main > *:nth-child(7)::before {
+#main > *:nth-child(6)::before {
     background-color: var(--color-7);
 }
 
-#main > *:nth-child(8)::before {
+#main > *:nth-child(7)::before {
     background-color: var(--color-8);
+}
+
+#main > *:nth-child(8)::before {
+    background-color: var(--color-9);
 }
 
 #countdown {
@@ -299,6 +303,87 @@ strong {
 .package:hover {
     transform: scale(calc(var(--scale) * 1.1));
     box-shadow: 0 4px 10px var(--shadow-color);
+}
+
+#winners a[data-best]::before {
+    display: block;
+    height: auto;
+    position: absolute;
+    content: attr(data-best);
+    background-color: #7b6199;
+    font-size: 1rem;
+    padding: 0.25rem 0.25rem;
+    box-shadow: 0 4px 10px var(--shadow-color);
+    border-radius: 0.25rem;
+    line-height: 1rem;
+}
+
+#winners .package[data-best]::before {
+    bottom: 0;
+    margin: 0.5rem
+}
+
+#winners #runnerups a[data-best]::before {
+    top: -0.75rem;
+    right: -0.75rem;
+}
+
+#winners h3 {
+    text-align: center;
+    margin-top: 1rem;
+    text-shadow: 1px 1px var(--shadow-color);
+    font-weight: bold;
+}
+
+#winners #runnerups {
+    margin-top: 1rem;
+}
+
+#winners #runnerups a {
+    position: relative;
+    font-size: 1.5rem;
+    margin: 0.5rem;
+    line-height: 2rem;
+    background-color: #00000033;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.25rem;
+    box-shadow: 0 2px 8px var(--shadow-color);
+    text-decoration: none;
+}
+
+#winners #runnerups a:hover {
+    box-shadow: 0 4px 10px var(--shadow-color);
+}
+
+#winners #runnerups a:nth-child(1) {
+    font-size: 1.4rem;
+}
+
+#winners #runnerups a:nth-child(2) {
+    font-size: 1.6rem;
+}
+
+#winners #runnerups a:nth-child(3) {
+    font-size: 1.2rem;
+}
+
+#winners #runnerups a[data-tooltip]:hover::after {
+    display: block;
+    position: absolute;
+    content: attr(data-tooltip);
+    background-color: var(--color-1);
+    font-size: 1rem;
+    padding: 0.5rem 0.5rem;
+    box-shadow: 0 4px 10px var(--shadow-color);
+    border-radius: 0.25rem;
+    line-height: 1rem;
+    top: -1rem;
+    left: -1rem;
+}
+
+#winners p:not(#runnerups) {
+    margin-top: 1.5rem;
+    text-shadow: 1px 1px 2px var(--shadow-color);
 }
 
 #winners > a {
