--- a/site/public/index.css
+++ b/site/public/index.css
@@ -3,72 +3,10 @@
     --shadow-color: #000000cc;
 }
 
-/* Fonts */
-@font-face {
-    src: url("fonts/NotoSans-Regular.ttf");
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 400;
-}
-
-@font-face {
-    src: url("fonts/NotoSans-Italic.ttf");
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 400;
-}
-
-@font-face {
-    src: url("fonts/NotoSans-Light.ttf");
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 300;
-}
-
-@font-face {
-    src: url("fonts/NotoSans-LightItalic.ttf");
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 300;
-}
-
-@font-face {
-    src: url("fonts/NotoSans-Bold.ttf");
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 700;
-}
-
-@font-face {
-    src: url("fonts/NotoSans-BoldItalic.ttf");
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 700;
-}
-
-/* General */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: "Noto Sans", Times, sans-serif;
-    font-weight: normal;
-    color: #ffffff;
-}
-
-html, body {
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-    margin: 0; padding: 0;
-}
-
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: radial-gradient(circle, #5c5c5c, #1b1b1b 95%);
-    background-attachment: fixed;
 }
 
 .content, #hero {
@@ -97,6 +35,11 @@ body {
     margin-top: 4em;
     filter: drop-shadow(0px 0px 10px var(--shadow-color));
     transition: transform 0.2s ease-out;
+}
+
+.content, #hero {
+    width: max(22.5rem, 50%);
+    margin-top: 3em;
 }
 
 #theme {
